// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Button Renders properly 1`] = `
<button
  className="primaryCustomButtonStyle btn btn-primary"
  disabled={false}
  type="button"
/>
`;

exports[`Error 404 Page Renders properly 1`] = `
<div
  className="errorPage"
>
  <p
    className="errorHeader"
  >
     
    <strong>
      Error 404: Page not found 
    </strong>
     
  </p>
  <p
    className="errorText"
  >
      We could not find that page. 
    <br />
    Sorry for the inconvenience.
  </p>
</div>
`;

exports[`Footer Renders properly 1`] = `
<div>
  <nav
    className="footer footerStyle siteDefaultMargin navbar navbar-expand-lg navbar-light"
  >
    <a
      className="active navbar-brand"
      href="/"
      onClick={[Function]}
      style={Object {}}
    >
      <img
        alt="we are us logo"
        className="d-inline-block align-top"
        src={
          Object {
            "ReactComponent": Object {
              "$$typeof": Symbol(react.forward_ref),
              "render": [Function],
            },
            "__esModule": true,
            "default": "we_are_us_footer_symbol.svg",
          }
        }
      />
    </a>
    <div
      className="navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/for-practitioner"
        href="/for-practitioner"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Register As Practicioner
      </a>
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/contact-us"
        href="/contact-us"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Contact Us
      </a>
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/terms-and-conditions"
        href="/terms-and-conditions"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Terms And Conditions
      </a>
    </div>
    <div
      aria-expanded={null}
      className="justify-content-end navbar-collapse collapse"
    >
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <img
          alt="facebook icon"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "icon_fb.svg",
            }
          }
        />
      </a>
      <a
        className="nav-link"
        href="#"
        onClick={[Function]}
        onKeyDown={[Function]}
        role="button"
      >
        <img
          alt="instagram icon"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "icon_insta.svg",
            }
          }
        />
      </a>
    </div>
  </nav>
</div>
`;

exports[`Navbar 1 Renders properly 1`] = `
<nav
  className="navBar navbar navbar-expand-lg navbar-light fixed-top"
>
  <a
    className="navbar-brand"
    href="/home"
    onClick={[Function]}
  >
    <img
      alt="we are us logo"
      className="d-inline-block align-top"
      src={
        Object {
          "ReactComponent": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__esModule": true,
          "default": "we_are_us_logo.svg",
        }
      }
    />
  </a>
  <button
    aria-controls="responsive-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    aria-expanded={null}
    className="justify-content-end navbar-collapse collapse"
    id="responsive-navbar-nav"
  >
    <div
      className="navBar-links navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/search"
        href="/search"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Search
      </a>
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/about"
        href="/about"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        About
      </a>
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/for-practitioner"
        href="/for-practitioner"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        For Practitioners
      </a>
      <a
        className="navBarEffect nav-link"
        data-rb-event-key="/login"
        href="/login"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Login
      </a>
      <a
        className="highlightNav nav-link"
        data-rb-event-key="/register"
        href="/register"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Register
      </a>
    </div>
  </div>
</nav>
`;

exports[`Navbar 2 Renders properly 1`] = `
<nav
  className="navBar2 navbar navbar-expand-lg navbar-light fixed-top"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <a
    className="navbar-brand"
    href="/home"
    onClick={[Function]}
  >
    <img
      alt="we are us logo"
      className="d-inline-block align-top"
      src={
        Object {
          "ReactComponent": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__esModule": true,
          "default": "we_are_us_logo_white.svg",
        }
      }
    />
  </a>
  <button
    aria-controls="responsive-navbar-nav"
    aria-label="Toggle navigation"
    className="navbar-toggler collapsed"
    onClick={[Function]}
    type="button"
  >
    <span
      className="navbar-toggler-icon"
    />
  </button>
  <div
    aria-expanded={null}
    className="justify-content-end navbar-collapse collapse"
    id="responsive-navbar-nav"
  >
    <div
      className="navBar2-links navbar-nav"
      onKeyDown={[Function]}
    >
      <a
        className="navBar2Effect nav-link"
        data-rb-event-key="/search"
        href="/search"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Search
      </a>
      <a
        className="navBar2Effect nav-link"
        data-rb-event-key="/about"
        href="/about"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        About
      </a>
      <a
        className="navBar2Effect nav-link"
        data-rb-event-key="/for-practitioner"
        href="/for-practitioner"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        For Practitioners
      </a>
      <a
        className="navBar2Effect nav-link"
        data-rb-event-key="/login"
        href="/login"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Login
      </a>
      <a
        className="highlightNav2 nav-link"
        data-rb-event-key="/register"
        href="/register"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Register
      </a>
    </div>
  </div>
</nav>
`;
